<resources>
    <string name="app_name">TP1 INF8405</string>
    <string name="main_title">Welcome to TP1!</string>
    <string name="main_play">PLAY</string>
    <string name="main_about">ABOUT</string>
    <string name="main_exit">EXIT</string>

    <string name="about_title">ABOUT US</string>
    <string name="about_members_header">MEMBERS:</string>
    <string name="about_member1">Dinh Huân Philippe Duong</string>
    <string name="about_member2">Yassine Belkacemi</string>
    <string name="about_member3">Simon Moreau</string>
    <string name="about_member4">Aladji Faye</string>
    <string name="about_group">Groupe 01</string>

    <string name="score">Score joueur %1$d : %2$d</string>
    <string name="tour">Tour du joueur %1$d</string>
    <string name="joueur1">Le joueur 1 a gagné!</string>
    <string name="joueur2">Le joueur 2 a gagné!</string>
    <string name="nul">Match nul</string>
</resources>